--- a/cloudfunctions/music/package.json
+++ b/cloudfunctions/music/package.json
@@ -9,8 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
+    "axios": "^0.21.4",
     "tcb-router": "^1.1.2",
     "wx-server-sdk": "~2.5.3"
   }
