--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
-  "pages":[
+  "pages": [
     "pages/playlist/playlist",
     "pages/blog/blog",
     "pages/profile/profile",
     "pages/musiclist/musiclist",
     "pages/player/player"
   ],
-  "window":{
+
+  "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#d43c33",
@@ -40,9 +41,7 @@
     ]
   },
 
-  "requiredBackgroundModes": [
-    "audio"
-  ],
+  "requiredBackgroundModes": ["audio"],
 
   "style": "v2",
   "sitemapLocation": "sitemap.json"
